[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/stages/bgLauncher.gd" type="Script" id=1]
[ext_resource path="res://graphics/environment/stage3launcher/launcher1.png" type="Texture" id=2]
[ext_resource path="res://graphics/environment/stage3launcher/spacecraft1.png" type="Texture" id=3]
[ext_resource path="res://graphics/environment/stage3launcher/spacecraft2.png" type="Texture" id=4]
[ext_resource path="res://graphics/environment/stage3launcher/spacecraft3.png" type="Texture" id=5]
[ext_resource path="res://graphics/environment/stage3launcher/launchershadow1.png" type="Texture" id=6]
[ext_resource path="res://graphics/environment/stage3launcher/launchertop1.png" type="Texture" id=7]
[ext_resource path="res://graphics/environment/stage3launcher/launchertop2.png" type="Texture" id=8]
[ext_resource path="res://graphics/environment/stage3launcher/launchertop3.png" type="Texture" id=9]
[ext_resource path="res://graphics/environment/stage3launcher/launchertop4.png" type="Texture" id=10]
[ext_resource path="res://graphics/environment/stage3launcher/launchertop5.png" type="Texture" id=11]
[ext_resource path="res://graphics/environment/stage3launcher/launchertop6.png" type="Texture" id=12]
[ext_resource path="res://graphics/environment/stage3launcher/launchertop7.png" type="Texture" id=13]
[ext_resource path="res://graphics/environment/stage3launcher/launchermask.png" type="Texture" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "normal",
"speed": 15.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": false,
"name": "normal",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": false,
"name": "launch",
"speed": 10.0
} ]

[sub_resource type="Animation" id=3]
resource_name = "start"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 50 ), Vector2( 0, -100 ) ]
}

[node name="bgLauncher" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 0, 50 )
frames = SubResource( 1 )
animation = "normal"
frame = 1
playing = true

[node name="Sprite2" type="Sprite" parent="."]
texture = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "normal"

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 0, 68 )
texture = ExtResource( 14 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/start = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
